; ModuleID = '/home/carl/AnghaBench/twemproxy/src/extr_nc_response.c_rsp_put.c'
source_filename = "/home/carl/AnghaBench/twemproxy/src/extr_nc_response.c_rsp_put.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.msg = type { i32*, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @rsp_put(%struct.msg* %0) #0 {
  %2 = alloca %struct.msg*, align 8
  store %struct.msg* %0, %struct.msg** %2, align 8
  %3 = load %struct.msg*, %struct.msg** %2, align 8
  %4 = getelementptr inbounds %struct.msg, %struct.msg* %3, i32 0, i32 1
  %5 = load i32, i32* %4, align 8
  %6 = icmp ne i32 %5, 0
  %7 = xor i1 %6, true
  %8 = zext i1 %7 to i32
  %9 = call i32 @ASSERT(i32 %8)
  %10 = load %struct.msg*, %struct.msg** %2, align 8
  %11 = getelementptr inbounds %struct.msg, %struct.msg* %10, i32 0, i32 0
  %12 = load i32*, i32** %11, align 8
  %13 = icmp eq i32* %12, null
  %14 = zext i1 %13 to i32
  %15 = call i32 @ASSERT(i32 %14)
  %16 = load %struct.msg*, %struct.msg** %2, align 8
  %17 = call i32 @msg_put(%struct.msg* %16)
  ret void
}

declare dso_local i32 @ASSERT(i32) #1

declare dso_local i32 @msg_put(%struct.msg*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
